fixed side bar spacing

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     float: right;
     padding: 5px;
     position: relative;
-    right: 90px;
+    right: 40px;
     bottom: 530px;   
 }
 
@@ -54,7 +54,7 @@ body {
     background-color: rgb(25, 66, 96);
     float: right;
     position: relative;
-    right: 110px;
+    right: 50px;
     bottom: 1720px;
     padding: 5%;
     padding-bottom: 2%;
